--- a/.github/workflows/sync-brands.yml
+++ b/.github/workflows/sync-brands.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: '18'
         
     - name: Install dependencies
-      run: npm install puppeteer
+      run: npm ci --production
       
     - name: Run brand scraping
       run: node scrape-brands.js
